
1.23.0
---
- First incarnation of libout123, a basic library to get audio data written
  to audio devices (or files). This collects the output modules of mpg123
  and makes them available to the wider masses.
- Added mpg123 --no-infoframe.
- Detect terminal on input side and enable control keys automatically.
  There is --no-control now to disable terminal control anyway.
- Clip decode tables for large amplification with fixed-point decoders.
  Without that, high-pitched distortion enters really quickly when
  trying to increase volume even if output samples would not be clipped,
  weren't it for fixed-point math.
- Warning messages also start with a line break now to better fit in with
  verbose playback.
- Reporting of clipped samples also includes a line break now.
- Default for --preload now is 0.2 instead of 1 (fill whole buffer before
  playback). The maximum is 0.5 . This is mandated by corrected buffer
  interaction in libout123.
- Improved interaction with buffer process in terminal control mode.
  Seeking is more transparent now, taking dropped samples from buffer into
  account to avoid unintended jumps. Direct seeks with number row do not
  pause playback anymore.
- Silently skip APE tags (thanks to Hans de Goede).
- Some reduction in bitrot on AIX (typos in output module, build with
  --disable-largefile --with-audio=aix, real test welcome).
- Added '[' and ']' keys to skip to previous/next directory in playlist.
- Added support for Haiku to configure script (thanks to Jerome Duval).
- Remove spurious Frankenstein warning when scanning files that have no
  gapless info (the reported value of -1152 gapless sample length should be
  a giveaway anyway).
- Fix a bug in the command line parser that was present from the beginning,
  apparently, causing certain parameters (--au, --cdr) to kill off parsing
  of following ones. Nobody complained in all these years. Astounding.

1.22.4
---
- Fix stupid regression introduced with a bugfix in 1.14.1 to make